--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/ziqni-tech/ziqni-classic-migration-tool/issues"
   },
-  "homepage": "https://github.com/ziqni-tech/ziqni-classic-migration-tool#readme"
+  "homepage": "https://github.com/ziqni-tech/ziqni-classic-migration-tool#readme",
+  "dependencies": {
+    "axios": "^1.3.5"
+  }
 }
