--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ziqni-tech/ziqni-classic-migration-tool#readme",
   "dependencies": {
-    "axios": "^1.3.5"
+    "axios": "^1.3.5",
+    "dotenv": "^16.0.3"
   }
 }
